syntax = "proto3";

package  netmarks_coin;

option go_package = "NetMARKS/services/coin/proto";

service Coin {
  rpc Produce(Request) returns (Response) {}
}

message Request {
  uint64 quantity = 1;
  string response_size = 2;
}

message Response {
  uint64 quantity = 1;
  repeated Single items = 2;
}

message Single {
  string id = 1;
  string random_metadata = 2;
  string coal_id = 3;
  string gold_id = 4;
}
